[package]
name = "colorspaces"
version = "0.1.0"
authors = ["Jonas Rinke <delphi1024@gmail.com>"]
edition = "2018"
description = "Backend for p5.colorSpaces, which converts large amounts of colors between color spaces."
repository = "https://github.com/0xJonas/p5.colorSpaces"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.51"
wee_alloc = { version = "0.4.2", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.2.45"
